Styling error patch (v1.2.2) - Fixed the select arrow covering select value text on smaller devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -111,13 +111,14 @@ body {
 
 select {
   padding: 5px;
+  padding-right: 35px;
   border: solid 5px #c9c9c9;
   transition: border 0.3s, background-image 0.3s;
   font-family: 'Bitter', serif;
   font-size: 20px;
   background-color: white;
   background-image: url('downarrow.png');
-  background-position: calc(100% - 20px);
+  background-position: calc(100% - 10px);
   background-repeat: no-repeat;
   background-size: 20px 12.50px;
 
